--- a/packages/ton-watch/package.json
+++ b/packages/ton-watch/package.json
@@ -14,7 +14,7 @@
     "pg": "^8.11.5",
     "pg-format": "^1.0.4",
     "ton-lite-client": "^3.0.0",
-    "ton-ls": "workspace:*"
+    "@ton/ls": "workspace:*"
   },
   "devDependencies": {},
   "peerDependencies": {
